--- a/base_phone_cdr/view/res_partner_view.xml
+++ b/base_phone_cdr/view/res_partner_view.xml
@@ -11,9 +11,7 @@
                     class="oe_stat_button"
                     icon="fa-list"
                     name="action_view_partner_cdr_records"
-                    attrs="{'invisible': [('customer', '=', False)]}"
-                    context="{'default_partner_id': active_id}"
-                >
+                    attrs="{'invisible': [('customer', '=', False)]}">
                     <div class="o_form_field o_stat_info">
                         <span class="o_stat_value">
                             <field name="total_cdr_count" />
