--- a/connector_phone_palitto_event_manager/view/res_partner_views.xml
+++ b/connector_phone_palitto_event_manager/view/res_partner_views.xml
@@ -37,4 +37,14 @@
         </field>
     </record>
 
+    <record id="action_partners_tree_all" model="ir.actions.act_window">
+        <field name="name">Partners</field>
+        <field name="res_model">res.partner</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="domain">[]</field>
+        <field name="target">current</field>
+    </record>
+
 </odoo>
