--- a/connector_phone_palitto_event_manager/view/res_company.xml
+++ b/connector_phone_palitto_event_manager/view/res_company.xml
@@ -12,6 +12,22 @@
                     </group>
                 </page>
             </notebook>
+            <field name="parent_id" position="after">
+                <field name="popup_time" />
+            </field>
         </field>
     </record>
+
+    <record id="res_config_settings_view_form_popup_time" model="ir.ui.view">
+        <field name="name">popup_time.base.config.settings.form</field>
+        <field name="model">res.config.settings</field>
+        <field name="inherit_id" ref="base_setup.res_config_settings_view_form" />
+        <field name="arch" type="xml">
+            <field name="number_of_digits_to_match_from_end" position="after">
+                <label for="popup_time" class="col-4 col-lg-4 o_light_label" string="Popup Time (Sec)"/>
+                <field name="popup_time"/>
+            </field>
+        </field>
+    </record>
+
 </odoo>
