--- a/connector_phone_palitto_event_manager/view/template.xml
+++ b/connector_phone_palitto_event_manager/view/template.xml
@@ -10,6 +10,10 @@
                 type="text/javascript"
                 src="/connector_phone_palitto_event_manager/static/src/js/widget.js"
             />
+            <script
+                type="text/javascript"
+                src="/connector_phone_palitto_event_manager/static/src/js/notification_widget.js"
+            />
         </xpath>
     </template>
 </odoo>
