--- a/connector_phone_cloudcti_event_manager/views/res_company.xml
+++ b/connector_phone_cloudcti_event_manager/views/res_company.xml
@@ -8,7 +8,9 @@
             <notebook position="inside">
                 <page string="CloudCTI API">
                     <group>
-                        <field name="cloudcti_url"/>
+                        <field name="cloudcti_base_url"/>
+                        <field name="cloudcti_signin_url"/>
+                        <field name="cloudcti_out_url"/>
                     </group>
                 </page>
             </notebook>
