--- a/base_phone/views/res_users_view.xml
+++ b/base_phone/views/res_users_view.xml
@@ -29,7 +29,7 @@
     <field name="inherit_id" ref="base.view_users_form_simple_modif" />
     <field name="arch" type="xml">
         <xpath expr="//group[@name='preference_email']/.." position="after">
-            <group name="phone" string="Telephony Preferences" invisible="1">
+            <group name="phone" string="Telephony Preferences" >
                 <!-- Empty group, that is used by other phone modules -->
             </group>
         </xpath>
