--- a/base_phone_cdr/view/res_users_view.xml
+++ b/base_phone_cdr/view/res_users_view.xml
@@ -8,8 +8,19 @@
             <xpath expr="//group[@name='preferences']" position="before">
                 <group name="phone-preferences" string="Telephony Preferences">
                     <field name="related_phone" />
-                    <field name="phone_password" />
+                    <field name="phone_password" password="true"/>
                 </group>
+            </xpath>
+        </field>
+    </record>
+    <record id="view_users_form_simple_modif_telephony_tab" model="ir.ui.view">
+        <field name="name">base_phone.user_preferences.view</field>
+        <field name="model">res.users</field>
+        <field name="inherit_id" ref="base_phone.view_users_form_simple_modif" />
+        <field name="arch" type="xml">
+            <xpath expr="//group[@name='phone']" position="inside">
+               <field name="related_phone" />
+               <field name="phone_password" password="true"/>
             </xpath>
         </field>
     </record>
