--- a/connector_phone_cloudcti_event_manager/views/phone_cdr_view.xml
+++ b/connector_phone_cloudcti_event_manager/views/phone_cdr_view.xml
@@ -8,6 +8,59 @@
             <field name="call_end_time" position="after">
 	        <field name="call_duration" />
             </field>
+            <xpath expr="//field[@name='caller_id']" position="after">
+                <button
+                        type="object"
+                        name="cloudcti_open_outgoing_notification"
+                        class="btn-sm btn-link mb4 fa fa-phone"
+                        context="{'phone_partner': 1, 'call_no': caller_id}"
+                />
+            </xpath>
+            <xpath expr="//field[@name='called_id']" position="after">
+                <button
+                        type="object"
+                        name="cloudcti_open_outgoing_notification"
+                        class="btn-sm btn-link mb4 fa fa-phone"
+                        context="{'phone_partner': 1, 'call_no': called_id}"
+                />
+            </xpath>
+        </field>
+    </record>
+    <record id="view_phone_cdr_form_cloudcti" model="ir.ui.view">
+        <field name="name">view.phone.cdr.form</field>
+        <field name="model">phone.cdr</field>
+        <field name="inherit_id" ref="base_phone_cdr.view_phone_cdr_form"/>
+        <field name="arch" type="xml">
+		<xpath expr="//field[@name='caller_id']" position="replace">
+		    <label for="caller_id"/>
+		    <div class="o_row">
+		    <field name="caller_id"/>
+                    <button
+                        type="object"
+                        name="cloudcti_open_outgoing_notification"
+			class="btn-sm btn-link mb4 fa fa-phone"
+                        attrs="{'invisible':[('caller_id', '=', False)]}"
+                        aria-label="Outgoing Call"
+                        title="Outgoing Call"
+                        context="{'phone_partner': 1, 'call_no': caller_id}"
+                    />
+	            </div>
+            </xpath>
+            <xpath expr="//field[@name='called_id']" position="replace">
+	            <label for="called_id"/>
+		    <div class="o_row">
+		    <field name="called_id"/>
+                    <button
+                        type="object"
+                        name="cloudcti_open_outgoing_notification"
+                        class="btn-sm btn-link mb4 fa fa-phone"
+                        aria-label="Outgoing Call"
+                        title="Outgoing Call"
+                        attrs="{'invisible':[('called_id', '=', False)]}"
+                        context="{'phone_partner': 1, 'call_no': called_id}"
+                    />
+	            </div>
+            </xpath>
         </field>
     </record>
 </odoo>
