--- a/connector_phone_cloudcti_event_manager/views/sale_order_views.xml
+++ b/connector_phone_cloudcti_event_manager/views/sale_order_views.xml
@@ -25,7 +25,7 @@
                     <button
                         type="object"
                         name="cloudcti_open_outgoing_notification"
-                        class="btn-sm btn-link mb4 fa fa-phone"
+                        class="btn-sm btn-link mb4 fa fa-mobile"
                         aria-label="Outgoing Call"
                         title="Outgoing Call"
                         attrs="{'invisible':[('partner_mobile', '=', False)]}"
@@ -54,7 +54,7 @@
                     <button
                         type="object"
                         name="cloudcti_open_outgoing_notification"
-                        class="btn-sm btn-link mb4 fa fa-phone"
+                        class="btn-sm btn-link mb4 fa fa-mobile"
                         aria-label="Outgoing Call"
                         title="Outgoing Call"
                         attrs="{'invisible':[('invoice_mobile', '=', False)]}"
@@ -82,7 +82,7 @@
                     <button
                         type="object"
                         name="cloudcti_open_outgoing_notification"
-                        class="btn-sm btn-link mb4 fa fa-phone"
+                        class="btn-sm btn-link mb4 fa fa-mobile"
                         aria-label="Outgoing Call"
                         title="Outgoing Call"
                         attrs="{'invisible':[('delivery_mobile', '=', False)]}"
