--- a/connector_phone_cloudcti_event_manager/views/stock_picking_views.xml
+++ b/connector_phone_cloudcti_event_manager/views/stock_picking_views.xml
@@ -25,7 +25,7 @@
                     <button
                         type="object"
                         name="cloudcti_open_outgoing_notification"
-                        class="btn-sm btn-link mb4 fa fa-phone"
+                        class="btn-sm btn-link mb4 fa fa-mobile"
                         aria-label="Outgoing Call"
                         title="Outgoing Call"
                         attrs="{'invisible':[('partner_mobile', '=', False)]}"
