--- a/connector_phone_cloudcti_event_manager/views/res_company.xml
+++ b/connector_phone_cloudcti_event_manager/views/res_company.xml
@@ -9,8 +9,9 @@
                 <page string="CloudCTI API">
                     <group>
                         <field name="cloudcti_base_url"/>
-                        <field name="cloudcti_signin_url"/>
                         <field name="cloudcti_out_url"/>
+                        <field name="cloudcti_signin_url"/>
+                        <field name="cloudcti_subscription_url"/>
                     </group>
                 </page>
             </notebook>
